[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/enemies/angler/angler.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/angler/Angler.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 14 )

[sub_resource type="CircleShape2D" id=3]
radius = 18.0278

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50, 23 )

[node name="Angler" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 2 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -16, 1 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 5, 2 )
shape = SubResource( 3 )

[node name="DetectionRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
position = Vector2( 51, 0 )
shape = SubResource( 4 )

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_AggroTimer_timeout"]
